--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -283,6 +283,64 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   font-weight: 400;
 }
 
+img.icon {
+  width: 24px;
+}
+
+button {
+  position: relative;
+  padding: 5px 17px 5px 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
+  width: fit-content;
+}
+button .btn-background {
+  position: absolute;
+  top: 0;
+  right: 23px;
+  left: 0;
+  height: 100%;
+  background-color: #319ee1;
+  z-index: -1;
+  transition: right 0.2s ease-in-out;
+}
+button:hover .btn-background {
+  right: 0;
+}
+button:focus {
+  outline: none;
+}
+button svg, button img {
+  position: relative;
+  left: 5px;
+  width: 15px;
+  fill: #fff;
+}
+
+a {
+  text-decoration: none;
+}
+
+row {
+  display: flex;
+}
+row column {
+  flex: 50%;
+  padding: 10px;
+}
+
+h1 {
+  font-size: 60px;
+}
+
+h3 {
+  font-size: 1.3em;
+  font-weight: bold !important;
+  margin-block-end: 0.2em;
+}
+
 .l-viewport {
   position: relative;
   width: 100%;
@@ -436,7 +494,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   text-transform: uppercase;
 }
 .header--logo img {
-  width: 40px;
+  width: 100px;
 }
 .header--nav-toggle {
   display: flex;
@@ -473,7 +531,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   color: #fff;
   font-weight: 700;
   text-transform: uppercase;
-  background-color: #0f33ff;
+  background-color: #319ee1;
   border: none;
   opacity: 0;
   visibility: hidden;
@@ -583,15 +641,6 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   height: 2px;
   background-color: #282828;
 }
-.intro--banner::after {
-  content: "";
-  position: absolute;
-  bottom: 18px;
-  left: 0;
-  width: 30px;
-  height: 4px;
-  background-color: #0f33ff;
-}
 .intro--banner h1 {
   position: relative;
   font-size: 68px;
@@ -599,40 +648,11 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   line-height: 1;
   z-index: 1;
 }
-.intro--banner button {
-  position: relative;
-  padding: 5px 17px 5px 12px;
-  font-weight: 700;
-  text-transform: uppercase;
-  background-color: transparent;
-  border: none;
-}
-.intro--banner button .btn-background {
-  position: absolute;
-  top: 0;
-  left: 23px;
-  right: 0;
-  height: 100%;
-  background-color: #0f33ff;
-  z-index: -1;
-  transition: left 0.2s ease-in-out;
-}
-.intro--banner button:hover .btn-background {
-  left: 0;
-}
-.intro--banner button:focus {
-  outline: none;
-}
-.intro--banner button svg {
-  position: relative;
-  left: 5px;
-  width: 15px;
-  fill: #fff;
-}
-.intro--banner img {
+.intro--banner #intro-img {
   position: absolute;
   bottom: 21px;
   right: -12px;
+  max-width: 500px;
 }
 .intro--options {
   display: flex;
@@ -665,7 +685,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   .intro--banner h1 {
     font-size: 55px;
   }
-  .intro--banner img {
+  .intro--banner #intro-img {
     width: 430px;
   }
   .intro--options > a {
@@ -675,10 +695,6 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
     margin-right: 0;
   }
 }
-.intro img#me-cutout {
-  max-width: 600px;
-}
-
 @media (max-width: 767px) {
   .intro--banner {
     height: 305px;
@@ -686,7 +702,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   .intro--banner h1 {
     font-size: 44px;
   }
-  .intro--banner img {
+  .intro--banner #intro-img {
     width: 330px;
   }
   .intro--options {
@@ -708,7 +724,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   .intro--banner h1 {
     font-size: 55px;
   }
-  .intro--banner img {
+  .intro--banner #intro-img {
     display: none;
   }
 }
@@ -909,7 +925,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   top: 20px;
   left: 200px;
   transform: rotate(-25deg);
-  border: 5px solid #0f33ff;
+  border: 5px solid #319ee1;
   border-right-color: transparent;
   border-bottom-color: transparent;
 }
@@ -921,7 +937,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   transform: rotate(45deg);
   width: 10px;
   height: 10px;
-  background-color: #0f33ff;
+  background-color: #319ee1;
 }
 .about--banner h2 {
   position: relative;
@@ -930,25 +946,6 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   font-weight: 900;
   line-height: 1;
   z-index: 1;
-}
-.about--banner h2::before {
-  content: "";
-  position: absolute;
-  top: 60px;
-  left: 268px;
-  width: 30px;
-  height: 30px;
-  background-color: #0f33ff;
-  border-radius: 50%;
-}
-.about--banner h2::after {
-  content: "";
-  position: absolute;
-  top: 255px;
-  left: 255px;
-  width: 10px;
-  height: 10px;
-  background-color: #0f33ff;
 }
 .about--banner a {
   padding: 5px 17px 5px 0;
@@ -987,19 +984,10 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   height: 75px;
   text-decoration: none;
   color: #fff;
-  border: 10px solid #0f33ff;
+  border: 10px solid #319ee1;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-}
-.about--options > a:nth-child(1) {
-  background-image: url("../img/about-winners.jpg");
-}
-.about--options > a:nth-child(2) {
-  background-image: url("../img/about-philosophy.jpg");
-}
-.about--options > a:nth-child(3) {
-  background-image: url("../img/about-history.jpg");
 }
 .about--options > a:hover h3 {
   bottom: -50px;
@@ -1011,6 +999,17 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   font-size: 16px;
   text-transform: uppercase;
   transition: bottom 0.2s ease-in-out, left 0.2s ease-in-out;
+}
+.about #github-activity {
+  margin-top: 20px;
+  max-width: 450px;
+}
+.about #github-activity img {
+  width: 100%;
+  filter: grayscale(25%) brightness(0.8);
+}
+.about #github-activity img:hover {
+  filter: grayscale(0%) brightness(0.9);
 }
 
 @media (max-width: 767px) {
@@ -1274,7 +1273,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
 }
 .contact--lockup .modal--options li:nth-child(3) {
   margin-bottom: 0;
-  background-color: #0f33ff;
+  background-color: #319ee1;
   text-transform: uppercase;
 }
 .contact--lockup .modal--options a {
@@ -1321,7 +1320,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   font-size: 16px;
   font-weight: 700;
   text-transform: uppercase;
-  background-color: #0f33ff;
+  background-color: #319ee1;
   border: none;
   border-radius: 0;
 }
@@ -1369,8 +1368,8 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   display: none;
 }
 .work-request--options input[type=checkbox]:checked + label {
-  background-color: #0f33ff;
-  border-color: #0f33ff;
+  background-color: #319ee1;
+  border-color: #319ee1;
 }
 .work-request--options input[type=checkbox]:checked + label svg {
   width: 15px;
@@ -1474,7 +1473,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   position: relative;
   transform: translateZ(0) translateX(0) rotateY(0deg);
   min-height: 100%;
-  outline: 30px solid #0f33ff;
+  outline: 30px solid #319ee1;
   transition: transform 0.4s;
 }
 
@@ -1492,7 +1491,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
 }
 .effect-rotate-left--animate .container {
   transform: translateZ(-1800px) translateX(-50%) rotateY(45deg);
-  outline: 30px solid #0f33ff;
+  outline: 30px solid #319ee1;
 }
 
 .outer-nav {
@@ -1547,7 +1546,7 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   width: 110%;
   height: 15px;
   opacity: 0;
-  background-color: #0f33ff;
+  background-color: #319ee1;
 }
 .outer-nav > li.is-active::before {
   opacity: 1;
