--- a/assets/css/modules/_intro.sass
+++ b/assets/css/modules/_intro.sass
@@ -24,14 +24,14 @@
       height: 2px
       background-color: $muted-gray
 
-    &::after
-      content: ""
-      position: absolute
-      bottom: 18px
-      left: 0
-      width: 30px
-      height: 4px
-      background-color: $highlight
+    //&::after
+    //  content: ""
+    //  position: absolute
+    //  bottom: 18px
+    //  left: 0
+    //  width: 30px
+    //  height: 4px
+    //  background-color: $highlight
 
     h1
       position: relative
@@ -40,41 +40,14 @@
       line-height: 1
       z-index: 1
 
-    button
-      position: relative
-      padding: 5px 17px 5px 12px
-      font-weight: 700
-      text-transform: uppercase
-      background-color: transparent
-      border: none
 
-      .btn-background
-        position: absolute
-        top: 0
-        left: 23px
-        right: 0
-        height: 100%
-        background-color: $highlight
-        z-index: -1
-        transition: left .2s ease-in-out
 
-      &:hover
-        .btn-background
-          left: 0
-
-      &:focus
-        outline: none
-
-      svg
-        position: relative
-        left: 5px
-        width: 15px
-        fill: $white
-
-    img
+    #intro-img
       position: absolute
       bottom: 21px
       right: -12px
+      max-width: 500px
+
 
   &--options
     display: flex
@@ -109,7 +82,7 @@
       h1
         font-size: 55px
 
-      img
+      #intro-img
         width: 430px
 
     &--options
@@ -119,10 +92,6 @@
 
         &:last-child
           margin-right: 0
-
-.intro
-  img#me-cutout
-    max-width: 600px
 
 
 @media (max-width: 767px)
@@ -135,7 +104,7 @@
       h1
         font-size: 44px
 
-      img
+      #intro-img
         width: 330px
 
     &--options
@@ -159,7 +128,7 @@
       h1
         font-size: 55px
 
-      img
+      #intro-img
         display: none
 
 @media (max-width: 600px) and (max-height: 750px)
