Improved styling here and there

--- a/assets/css/modules/_about.sass
+++ b/assets/css/modules/_about.sass
@@ -137,6 +137,7 @@
     img
       width: 100%
       filter: grayscale(25%) brightness(0.8)
+      transition: all 0.5s
 
       &:hover
         filter: grayscale(0%) brightness(0.9)
