--- a/assets/css/base/_components.sass
+++ b/assets/css/base/_components.sass
@@ -42,7 +42,7 @@ row
 
   column
     flex: 50%
-    padding: 10px
+    padding-right: 20px
 
 
 h1
@@ -52,3 +52,8 @@ h3
   font-size: 1.3em
   font-weight: bold !important
   margin-block-end: 0.2em
+
+.margin-zero
+  margin: 0
+  margin-block-end: 0
+  margin-block-start: 0
