--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -328,7 +328,7 @@ row {
 }
 row column {
   flex: 50%;
-  padding: 10px;
+  padding-right: 20px;
 }
 
 h1 {
@@ -339,6 +339,12 @@ h3 {
   font-size: 1.3em;
   font-weight: bold !important;
   margin-block-end: 0.2em;
+}
+
+.margin-zero {
+  margin: 0;
+  margin-block-end: 0;
+  margin-block-start: 0;
 }
 
 .l-viewport {
@@ -1007,6 +1013,7 @@ h3 {
 .about #github-activity img {
   width: 100%;
   filter: grayscale(25%) brightness(0.8);
+  transition: all 0.5s;
 }
 .about #github-activity img:hover {
   filter: grayscale(0%) brightness(0.9);
@@ -1311,7 +1318,6 @@ h3 {
   width: 100%;
   flex-direction: column;
   align-items: center;
-  color: #fff;
 }
 .work-request input[type=submit] {
   width: 400px;
@@ -1353,7 +1359,7 @@ h3 {
   font-size: 16px;
   font-weight: 700;
   text-align: center;
-  border: 2px solid #fff;
+  border: 2px solid #0c0c0c;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 }
@@ -1361,7 +1367,7 @@ h3 {
   position: relative;
   left: -5px;
   width: 0;
-  fill: #fff;
+  fill: #0c0c0c;
   transition: width 0.2s ease-in-out;
 }
 .work-request--options input[type=checkbox] {
@@ -1394,13 +1400,12 @@ h3 {
   padding: 0 0 5px 0;
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #0c0c0c;
   border-radius: 0;
 }
 .work-request--information input[type=text]:focus,
 .work-request--information input[type=email]:focus {
   outline: none;
-  background-color: #0c0c0c;
 }
 .work-request--information label {
   position: absolute;
