--- a/assets/css/base/_components.sass
+++ b/assets/css/base/_components.sass
@@ -36,6 +36,13 @@ button
 a
   text-decoration: none
 
+  .icon
+    filter: contrast(1) brightness(1)
+    transition: all 0.3s
+
+    &:hover
+      filter: contrast(0.5) brightness(5)
+
 
 row
   display: flex
@@ -57,3 +64,12 @@ h3
   margin: 0
   margin-block-end: 0
   margin-block-start: 0
+
+
+@media (max-width: 600px)
+  .hide-on-mobile
+    display: none
+
+@media (max-width: 767px)
+  .hide-on-tablet
+    display: none
