--- a/assets/css/modules/_hire.sass
+++ b/assets/css/modules/_hire.sass
@@ -91,15 +91,23 @@
     margin-bottom: 60px
 
     .information-name,
-    .information-email
+    .information-email,
+    .information-message
       position: relative
       width: 45%
       height: 50px
       font-size: 30px
       font-weight: 300
 
+    .information-message
+      width: 100%
+      font-size: 16px
+      height: fit-content
+
+
     input[type="text"],
-    input[type="email"]
+    input[type="email"],
+    textarea
       width: 100%
       padding: 0 0 5px 0
       background-color: transparent
